<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="articles">Articles</string>
    <string name="clear">Clear</string>
    <string name="empty_history">You don\'t have any analysis history.</string>
    <string name="delete">Delete</string>
    <string name="news_detail">News Detail</string>
    <string name="save">Save</string>
    <string name="analysis_result_image">Analysis Result Image</string>
    <string name="analysis_image_preview">Analysis Image Preview</string>
    <string name="main_content_title">Check your skin!</string>
    <string name="main_content_text">Please select a skin surface image to be analyzed for cancer detection.</string>
    <string name="app_logo">App logo</string>
</resources>